--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_local_notifications: ^14.1.1
   http: 0.13.4
   shared_preferences: ^2.0.12
+  flutter_popup_dialog: ^0.1.1
   provider: ^6.0.1
 dev_dependencies:
   flutter_test:
