--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_local_notifications: ^14.1.1
   http: 0.13.4
+  cached_network_image: ^3.2.3
   shared_preferences: ^2.0.12
-  flutter_popup_dialog: ^0.1.1
   provider: ^6.0.1
+  flutter_dialogs: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -64,6 +65,7 @@ flutter:
   assets:
     - assets/data.json
     - assets/images/
+    - assets/images/logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
